# xml_ru_to_eng

./: .env.example  .gitignore  pyproject.toml  requirements.txt
config/: .settings.py.swp  settings.py
prompts/v1/: translator.yaml
src/domain/: entities.py  exceptions.py  interfaces.py  value_objects.py
src/infrastructure/llm/: deepseek_adapter.py  prompt_loader.py
src/infrastructure/xml/: composer.py  parser.py
tests/fixtures/: sample1.xml
tests/some_test_scripts/: script1.py
