[project]
name = "xml_translator"
version = "0.1.0"
description = "XML translator Service with DeepSeek LLM"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "lxml>=5.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
